Update index .html

--- a/index .html
+++ b/index .html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h1>Привет мир</h1>
+    <a href="krossvordRU.html">Русский кроссворд</a><br>
+  <a href="krossvordEN.html">English crossword</a>
 </body>
 </html>
