--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -16,5 +16,10 @@
     <p class="quote">Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
     
     <p><a href="index.html">Назад на главную</a></p>
+    <h3>Кроссворды:</h3>
+<ul>
+    <li><a href="krossvordRU.html">Русский новогодний кроссворд</a></li>
+    <li><a href="krossvordEN.html">English New Year Crossword</a></li>
+</ul>
 </body>
 </html>
