--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>23 декабря, 2025</h2>
-    <img src="Icons/newyear.jpg.png" alt="Новый год">
+    <img src="icons/newyear.jpg.png" alt="Новый год">
     <p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь.</a></p>
     
     <h2>15 октября, 2025</h2>
