--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 
 <h3>🎄 Рождественская колядка 2026</h3>
 <video width="600" height="340" controls style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
-    <source src="videos/christmas-carol-2026.mp4" type="video/mp4">
+    <source src="videos/newTree.mp4" type="video/mp4">
     <source src="videos/christmas-carol-2026.webm" type="video/webm">
-
-    <a href="videos/christmas-carol-2026.mp4">Скачайте видео</a>
+    <a href="videos/newTree.mp4">Скачайте видео</a>
 </video>
 
 <p style="margin-top: 15px;">
-    <strong>Текст колядки:</strong> 
-    <a href="docs/Christmas_Carol_2026.pdf" target="_blank">Открыть PDF</a> | 
+    <strong>Текст колядки:</strong>
+    <a href="docs/Christmas_Carol_2026.pdf" target="_blank">Открыть PDF</a> |
     <a href="docs/Christmas_Carol_2026.txt" download>Скачать текст</a>
 </p>
 
