--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <p style="margin-top: 15px;">
     <strong>Текст колядки:</strong>
-    <a href="docs/Christmas_Carol_2026.pdf" target="_blank">Открыть PDF</a> |
-    <a href="docs/Christmas_Carol_2026.txt" download>Скачать текст</a>
+<p style="margin-top: 15px;">
+    <strong>поздравляю с наступающим рождеством 2026!</strong> Приятного просмотра! 🎶
+</p>
 </p>
 
 <p class="quote">Поздравляю с наступающим Рождеством 2026! 🎄</p>
