--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 </video>
 
 <p style="margin-top: 15px;">
-    <strong>Текст колядки:</strong>
-<p style="margin-top: 15px;">
-    <strong>поздравляю с наступающим рождеством 2026!</strong> Приятного просмотра! 🎶
-</p>
+    <strong>🎶 Текст колядки в видео!</strong> Приятного просмотра! 
 </p>
 
 <p class="quote">Поздравляю с наступающим Рождеством 2026! 🎄</p>
