--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
-<h2>23 декабря, 2025</h2>
-<img src="icons/newyear.jpg.png" alt="Новый год">
-<p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь.</a></p>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой блог</title>
+    <link type="text/css" rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h2>23 декабря, 2025</h2>
+    <img src="icons/newyear.jpg.png" alt="Новый год">
+    <p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь.</a></p>
 
-<h3>🎄 Рождественская колядка 2026</h3>
-<video width="600" height="340" controls style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
-    <source src="videos/newTree.mp4" type="video/mp4">
-    <source src="videos/christmas-carol-2026.webm" type="video/webm">
-    <a href="videos/newTree.mp4">Скачайте видео</a>
-</video>
+    <h3>🎄 Рождественская колядка 2026</h3>
+    <video width="600" height="340" controls style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+        <source src="videos/newTree.mp4" type="video/mp4">
+        <a href="videos/newTree.mp4">Скачайте видео</a>
+    </video>
 
-<p style="margin-top: 15px;">
-    <strong>🎶 Текст колядки в видео!</strong> Приятного просмотра! 
-</p>
+    <p style="margin-top: 15px;">
+        <strong>🎶 Текст колядки в видео!</strong> Приятного просмотра! 
+    </p>
 
-<p class="quote">Поздравляю с наступающим Рождеством 2026! 🎄</p>
+    <p class="quote">Поздравляю с наступающим Рождеством 2026! 🎄</p>
+</body>
+</html>
