--- a/krossvordRU.html
+++ b/krossvordRU.html
@@ -30,8 +30,8 @@
         </details>
     </div>
     
-    <p style="text-align: center; margin-top: 20px;">
-        <a href="index.html">← На главную</a>
+        <a href="Congratulations2026.html">← Вернуться назад</a> | 
+        <a href="index.html">Выйти на главную страницу</a>
     </p>
 </body>
 </html>
