--- a/krossvordRU.html
+++ b/krossvordRU.html
@@ -29,7 +29,7 @@
             <p>1. Ёлка<br>2. Подарок<br>3. Снегурочка<br>4. Хлопушка<br>5. Гирлянда</p>
         </details>
     </div>
-    
+    <p style="text-align: center; margin-top: 20px;">
         <a href="Congratulations2026.html">← Вернуться назад</a> | 
         <a href="index.html">Выйти на главную страницу</a>
     </p>
