--- a/krossvordRU.html
+++ b/krossvordRU.html
@@ -30,7 +30,7 @@
         </details>
     </div>
     <p style="text-align: center; margin-top: 20px;">
-        <a href="Congratulations2026.html">← Вернуться назад</a> | 
+        <a href="Congratulations2026.html">← вернуться к поздравлениям</a> | 
         <a href="index.html">Выйти на главную страницу</a>
     </p>
 </body>
