--- a/krossvordEN.html
+++ b/krossvordEN.html
@@ -31,7 +31,7 @@
     </div>
     
     <p style="text-align: center; margin-top: 20px;">
-        <a href="Congratulations2026.html">← Back to Congratulations</a> | 
+        <a href="Congratulations2026.html">← return to congratulations</a> | 
         <a href="index.html">Main page</a>
     </p>
 </body>
