--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 style="text-align: center; color: #ff0000;">🎅 23 декабря, 2025 🎅</h2>
         
         <div class="center">
-            <img src="icons/newyear.jpg.png" alt="Новый год" style="max-width: 300px; margin: 20px auto; border-radius: 10px;">
+            <img src="Icons/newyear.jpg.png" alt="Новый год" style="max-width: 300px; margin: 20px auto; border-radius: 10px;">
         </div>
 
         <h3 style="text-align: center; color: #228b22; margin-top: 40px;">🎄 Рождественская колядка 2026 🎄</h3>
